--- a/test/fixtures/todo_items.yml
+++ b/test/fixtures/todo_items.yml
@@ -1,13 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  due_date: 2016-04-17
+  due_date: 2016-07-20
   title: MyString
   description: MyText
   completed: false
+  todo_list_id: 
 
 two:
-  due_date: 2016-04-17
+  due_date: 2016-07-20
   title: MyString
   description: MyText
   completed: false
+  todo_list_id: 
